# wireguard-android

.github/workflows/: android.yml
tunnel/: build.gradle.kts
tunnel/prebuilt/include/u2t_tlcp/: u2t_tlcp_android.h
tunnel/src/main/: AndroidManifest.xml
tunnel/src/main/java/com/wireguard/android/backend/: GoBackend.java
tunnel/tools/: CMakeLists.txt  u2t_tlcp_jni.c  u2t_tlcp_jni.cpp
ui/src/main/: AndroidManifest.xml
